--- a/manifest.plist
+++ b/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://res.xingyaoyvlecheng.com:8081/app/xy.ipa</string>
+					<string>http://res.xingyaoyvle.com:8081/app/xy.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>http://res.xingyaoyvlecheng.com:8081/app/icon_57.png</string>
+					<string>http://res.xingyaoyvle.com:8081/app/icon_57.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>http://res.xingyaoyvlecheng.com:8081/app/icon_512.png</string>
+					<string>http://res.xingyaoyvle.com:8081/app/icon_512.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
